--- a/uml.tex
+++ b/uml.tex
@@ -1,4 +1,4 @@
-% Created 2016-02-26 fr. 07:37
+% Created 2016-02-29 ma. 11:25
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -29,24 +29,23 @@
 \tableofcontents
 
 
-
-\section{General description}
-\label{sec-1}
-
 \section{Class diagrams}
-\label{sec-2}
-\subsection{Client side}
-\label{sec-2-1}
-Stuff
-
+\label{sec-1}
+\subsection{Client}
+\label{sec-1-1}
 \includegraphics[width=.9\linewidth]{client_class.png}
 \subsection{Server}
-\label{sec-2-2}
-Stuff aand stuff
-
+\label{sec-1-2}
 \includegraphics[width=.9\linewidth]{server_class.png}
 
 \section{Sequence diagrams}
-\label{sec-3}
+\label{sec-2}
+\subsection{Log in}
+\label{sec-2-1}
+\includegraphics[width=.9\linewidth]{sequence_login.png}
+
+\subsection{Send message}
+\label{sec-2-2}
+\includegraphics[width=.9\linewidth]{sequence_msg.png}
 % Emacs 24.5.1 (Org mode 8.2.10)
 \end{document}
