--- a/uml.tex
+++ b/uml.tex
@@ -1,4 +1,4 @@
-% Created 2016-02-29 ma. 22:14
+% Created 2016-03-03 to. 15:42
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -28,10 +28,9 @@
 \maketitle
 \tableofcontents
 
-\section{Intro}
+\section{General description}
 \label{sec-1}
-General description
-We have introduced a new class called Server. It contains a dictionary with all
+We have introduced a new "class" called Server. It contains a dictionary with all
 the clients and their chat history. This class is included in Clienthandler so
  that we can control if a username is available and retrieve the chat history of
  that specific client.
@@ -49,6 +48,7 @@ The class diagrams shows the classes with their functions and variables. We have
 \subsection{Client}
 \label{sec-2-1}
 \includegraphics[width=.9\linewidth]{client_class.png}
+
 \subsection{Server}
 \label{sec-2-2}
 \includegraphics[width=.9\linewidth]{server_class.png}
